5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1592_1802.log
== TEST (2019-05-04 20:31:16) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano=(√5*D1) + pi*(D2/3)
rv = dano - pvi
print(rv)
-- ERROR:
File "XXXX", line 5
    dano=(√5*D1) + pi*(D2/3)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:32:06) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano=(raiz5*D1) + pi*(D2/3)
rv = dano - pvi
print(rv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=(raiz5*D1) + pi*(D2/3)
NameError: name 'raiz5' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:37:18) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano=((5*D1)**0.5) + pi*(D2/3)
rv = dano - pvi
print(rv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=((5*D1)**0.5) + pi*(D2/3)
NameError: name 'D1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:38:33) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = ((5 * D1)**0.5) + (pi*(D2/3))
rv = dano - pvi
print(rv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = ((5 * D1)**0.5) + (pi*(D2/3))
NameError: name 'D1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:39:05) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = ((5 * d1)**0.5) + (pi*(d2/3))
rv = dano - pvi
print(rv)
-- OUTPUT:
-191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:39:42) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = ((5 * d1)**0.5) + (pi*(d2/3))
rv = dano - pvi
print(int(rv))
-- OUTPUT:
-191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:40:34) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = ((5 * d1)**0.5) + (pi*(d2/3))
rv = dano - pvi
print(int(rv))
-- OUTPUT:
-191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:41:57) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = ((5 * d1)**0.5) + (pi*(d2/3))
rv = dano - pvi
print(int(rv))
-- OUTPUT:
-191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:42:22) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = ((5 * d1)**0.5) + (pi*(d2/3))
rv = dano - pvi
print(rv)
-- OUTPUT:
-191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:42:54) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = ((5 * d1)**0.5) + (pi*(d2/3))
rv = dano - pvi
print(round(rv, 2))
-- OUTPUT:
-191.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-04 20:43:13) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = ((5 * d1)**0.5) + (pi*(d2/3))
rv = dano - pvi
print(round(rv, 0))
-- OUTPUT:
-191.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:36:10) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi*(d2/3))
rv = dano - pvi
print(rv)
-- OUTPUT:
-191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:36:35) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi*d2/3)
rv = dano - pvi
print(rv)
-- OUTPUT:
-191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:37:24) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi*d2/3)
rv = dano - pvi
print(int(rv)
-- ERROR:
File "XXXX", line 8
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:37:29) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi*d2/3)
rv = dano - pvi
print(int(rv))
-- OUTPUT:
-191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:38:20) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi*d2/3)
rv = pvi - dano
print(int(rv))

-- OUTPUT:
191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-06 13:39:06) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi*d2/3)
rv = pvi - dano
print(int(rv))

-- EXECUTION TIME:
0.182884
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
191
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
288
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:40:40) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi**d2/3)
rv = pvi - dano
print(int(rv))

-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:41:40) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi*d2/3)
rv = pvi - int(dano)


-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:41:58) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi*d2/3)
rv = pvi - int(dano)
print(rv)


-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-06 13:42:06) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi*d2/3)
rv = pvi - int(dano)
print(rv)


-- EXECUTION TIME:
0.171197
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:42:50) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi*d2/3)
dano = int(dano)
rv = pvi - dano
print(rv)


-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-06 13:42:57) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = (sqrt(5 * d1)) + (pi*d2/3)
dano = int(dano)
rv = pvi - dano
print(rv)


-- EXECUTION TIME:
0.165893
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:43:21) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = int(sqrt(5 * d1)) + (pi*d2/3)
rv = pvi - dano
print(rv)


-- OUTPUT:
191.7168146928204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:43:40) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = int((sqrt(5 * d1)) + (pi*d2/3))
rv = pvi - dano
print(rv)


-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-06 13:43:51) 
-- CODE:
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
from math import*
dano = int((sqrt(5 * d1)) + (pi*d2/3))
rv = pvi - dano
print(rv)


-- EXECUTION TIME:
0.169578
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:31:48) 
-- CODE:
from math import*
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
dano = sqrt(5 * d1) + pi ** (d2/3)
danof = int(dano)
print(danof)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:33:36) 
-- CODE:
from math import*
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
dano = sqrt(5 * d1) + (pi ** d2/3)
danof = int(dano)
print(danof)

-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:34:00) 
-- CODE:
from math import*
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
dano = sqrt(5 * d1) + (pi ** (d2/3))
danof = int(dano)
print(danof)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:36:58) 
-- CODE:
from math import*
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
dano = sqrt(5 * d1) + (pi ** (d2/3))
danof = int(dano)
pvr = pvi - danof
print(pvi)

-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:37:15) 
-- CODE:
from math import*
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
dano = sqrt(5 * d1) + (pi ** (d2/3))
danof = int(dano)
pvr = pvi - danof
print(pvr)

-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 22:37:24) 
-- CODE:
from math import*
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
dano = sqrt(5 * d1) + (pi ** (d2/3))
danof = int(dano)
pvr = pvi - danof
print(pvr)

-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 22:37:33) 
-- CODE:
from math import*
pvi = int(input("vida inicial: "))
d1 = int(input("dado 1: "))
d2 = int(input("dado 2: "))
dano = sqrt(5 * d1) + (pi ** (d2/3))
danof = int(dano)
pvr = pvi - danof
print(pvr)

-- EXECUTION TIME:
0.138791
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
